@@ -1,6 +1,6 @@
 --- ParMetis-3.1.orig/Programs/Makefile
 +++ ParMetis-3.1/Programs/Makefile
-@@ -2,8 +2,8 @@
+@@ -2,13 +2,13 @@
  
  BINDIR = ../Graphs
  
@@ -11,6 +11,13 @@
  
  
  LIBSDIR = -L.. $(LIBDIR) 
+-LIBS = -lparmetis -lmetis $(XTRALIBS) -lm
+-PARMETISLIB = ../libparmetis.a ../libmetis.a
++LIBS = -lparmetis -lMETIS $(XTRALIBS) -lm
++PARMETISLIB = ../libparmetis.a ../libMETIS.a
+ 
+ 
+ PTESTOBJS = ptest.o io.o adaptgraph.o
 @@ -17,7 +17,7 @@
  
            
@@ -25,7 +32,7 @@
 @@ -1,5 +1,8 @@
  include ../Makefile.in
  
-+all: ../libmetis.a ../libmetis.so
++all: ../libMETIS.a ../libMETIS.so
 +
 +.SUFFIXES: .c .lo .o
  
@@ -44,14 +51,15 @@
 +.c.lo:
 +	$(CC) $(CPPFLAGS) $(CFLAGS) -fPIC -DPIC -c $< -o $@
  
- ../libmetis.a: $(OBJS)
+-../libmetis.a: $(OBJS)
++../libMETIS.a: $(OBJS)
  	$(AR) $@ $(OBJS)
  	$(RANLIB) $@
  
-+../libmetis.so: $(SHLOBJS)
-+	$(CC) -shared $^ -Wl,-soname,libmetis.so.3.1 -o $@.3.1 \
++../libMETIS.so: $(SHLOBJS)
++	$(CC) -shared $^ -Wl,-soname,libMETIS.so.3.1 -o $@.3.1 \
 +	  $(LIBDIR) -lmpi
-+	ln -s libmetis.so.3.1 $@
++	ln -s libMETIS.so.3.1 $@
 +
  clean:
 -	rm -f *.o 
@@ -59,7 +67,7 @@
  
  realclean:
 -	rm -f *.o ; rm -f ../libmetis.a
-+	rm -f *.o *.lo ../libmetis.*
++	rm -f *.o *.lo ../libMETIS.*
  
  
  checkin:
