@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Nov 2007; Oliver Borm (boroli) <oli.borm@web.de>
+  files/parmetis-3.1.patch:
+  The libmetis from the parmetis package is now named libMETIS, in order to
+  solve a conflict with the libmetis library from the metis package.
+
   05 Nov 2007; Christian Faulhammer <opfer@gentoo.org> parmetis-3.1.ebuild:
   add a directory change to S and remove unecessary die statement
 
